Root Access Function and Signal Handler

--- a/roborio/latex/dir_313caf1132e152dd9b58bea13a4052ca.tex
+++ b/roborio/latex/dir_313caf1132e152dd9b58bea13a4052ca.tex
@@ -3,5 +3,9 @@
 \subsection*{Files}
 \begin{DoxyCompactItemize}
 \item 
+file \hyperlink{kernel__interface_8h}{kernel\+\_\+interface.\+h}
+\item 
+file \hyperlink{linux_8cpp}{linux.\+cpp}
+\item 
 file \hyperlink{matchdata_8h}{matchdata.\+h}
 \end{DoxyCompactItemize}
