--- a/roborio/latex/files.tex
+++ b/roborio/latex/files.tex
@@ -2,5 +2,7 @@
 Here is a list of all files with brief descriptions\+:\begin{DoxyCompactList}
 \item\contentsline{section}{src/\hyperlink{drivetrain_8h}{drivetrain.\+h} }{\pageref{drivetrain_8h}}{}
 \item\contentsline{section}{src/\hyperlink{test_8cpp}{test.\+cpp} }{\pageref{test_8cpp}}{}
+\item\contentsline{section}{src/utils/\hyperlink{kernel__interface_8h}{kernel\+\_\+interface.\+h} }{\pageref{kernel__interface_8h}}{}
+\item\contentsline{section}{src/utils/\hyperlink{linux_8cpp}{linux.\+cpp} }{\pageref{linux_8cpp}}{}
 \item\contentsline{section}{src/utils/\hyperlink{matchdata_8h}{matchdata.\+h} }{\pageref{matchdata_8h}}{}
 \end{DoxyCompactList}
