--- a/roborio/latex/refman.tex
+++ b/roborio/latex/refman.tex
@@ -153,6 +153,8 @@
 \chapter{File Documentation}
 \input{drivetrain_8h}
 \input{test_8cpp}
+\input{kernel__interface_8h}
+\input{linux_8cpp}
 \input{matchdata_8h}
 %--- End generated contents ---
 
