--- a/roborio/latex/drivetrain_8h.tex
+++ b/roborio/latex/drivetrain_8h.tex
@@ -9,13 +9,6 @@ Include dependency graph for drivetrain.\+h\+:\nopagebreak
 \includegraphics[width=196pt]{drivetrain_8h__incl}
 \end{center}
 \end{figure}
-This graph shows which files directly or indirectly include this file\+:\nopagebreak
-\begin{figure}[H]
-\begin{center}
-\leavevmode
-\includegraphics[width=161pt]{drivetrain_8h__dep__incl}
-\end{center}
-\end{figure}
 \subsection*{Classes}
 \begin{DoxyCompactItemize}
 \item 
@@ -65,6 +58,10 @@ Turn two encoder readings (in coordinate units) into coordinates.
 
 \begin{equation}
 r=\frac{y}{sin(\theta)}
+\end{equation}
+
+\begin{equation}
+x=\frac{y}{sin(\theta)} 
 \end{equation}
 
  \index{drivetrain.\+h@{drivetrain.\+h}!operator+@{operator+}}
