reorganization and mapper tool

--- a/roborio/latex/dir_68267d1309a1af8e8297ef4c3efbcdba.tex
+++ b/roborio/latex/dir_68267d1309a1af8e8297ef4c3efbcdba.tex
@@ -5,12 +5,7 @@ Directory dependency graph for src\+:
 \subsection*{Directories}
 \begin{DoxyCompactItemize}
 \item 
-directory \hyperlink{dir_313caf1132e152dd9b58bea13a4052ca}{utils}
-\end{DoxyCompactItemize}
-\subsection*{Files}
-\begin{DoxyCompactItemize}
+directory \hyperlink{dir_542141c9549cf739c3ad3deb5808e326}{drivetrain}
 \item 
-file \hyperlink{drivetrain_8h}{drivetrain.\+h}
-\item 
-file \hyperlink{test_8cpp}{test.\+cpp}
+directory \hyperlink{dir_b7878ad5ecbf2506f4125b9d34c97e45}{util}
 \end{DoxyCompactItemize}
