--- a/roborio/latex/drivetrain_8h.tex
+++ b/roborio/latex/drivetrain_8h.tex
@@ -1,78 +1,7 @@
-\hypertarget{drivetrain_8h}{}\section{src/drivetrain.h File Reference}
-\label{drivetrain_8h}\index{src/drivetrain.\+h@{src/drivetrain.\+h}}
-{\ttfamily \#include $<$cmath$>$}\\*
-{\ttfamily \#include $<$iostream$>$}\\*
-Include dependency graph for drivetrain.\+h\+:\nopagebreak
-\begin{figure}[H]
-\begin{center}
-\leavevmode
-\includegraphics[width=196pt]{drivetrain_8h__incl}
-\end{center}
-\end{figure}
-\subsection*{Classes}
-\begin{DoxyCompactItemize}
-\item 
-struct \hyperlink{structCurve}{Curve}
-\begin{DoxyCompactList}\small\item\em Describes the position and direction of a robot after a curve amount. \end{DoxyCompactList}\item 
-struct \hyperlink{structDoublePair}{Double\+Pair}
-\begin{DoxyCompactList}\small\item\em Stores generic 2-\/value real number objects. \end{DoxyCompactList}\end{DoxyCompactItemize}
-\subsection*{Macros}
-\begin{DoxyCompactItemize}
-\item 
-\#define \hyperlink{drivetrain_8h_ae3ec3219e4eee3b0992bfd59c2e2bc42}{H\+A\+L\+F\+\_\+\+PI}~1.\+570796327
-\end{DoxyCompactItemize}
-\subsection*{Functions}
-\begin{DoxyCompactItemize}
-\item 
-\hyperlink{structCurve}{Curve} \hyperlink{drivetrain_8h_ac066a178f480b2ef13117a6935768228}{operator+} (\hyperlink{structCurve}{Curve} a, \hyperlink{structCurve}{Curve} b)
-\begin{DoxyCompactList}\small\item\em Adds two curves. \end{DoxyCompactList}\item 
-\hyperlink{structCurve}{Curve} \hyperlink{drivetrain_8h_a2bd1c94bab26fa3bb4f4ef3b58896bea}{curveamount} (double L1, double L2, double W)
-\begin{DoxyCompactList}\small\item\em Turn two encoder readings (in coordinate units) into coordinates. \end{DoxyCompactList}\end{DoxyCompactItemize}
-
-
-\subsection{Macro Definition Documentation}
-\index{drivetrain.\+h@{drivetrain.\+h}!H\+A\+L\+F\+\_\+\+PI@{H\+A\+L\+F\+\_\+\+PI}}
-\index{H\+A\+L\+F\+\_\+\+PI@{H\+A\+L\+F\+\_\+\+PI}!drivetrain.\+h@{drivetrain.\+h}}
-\subsubsection[{\texorpdfstring{H\+A\+L\+F\+\_\+\+PI}{HALF_PI}}]{\setlength{\rightskip}{0pt plus 5cm}\#define H\+A\+L\+F\+\_\+\+PI~1.\+570796327}\hypertarget{drivetrain_8h_ae3ec3219e4eee3b0992bfd59c2e2bc42}{}\label{drivetrain_8h_ae3ec3219e4eee3b0992bfd59c2e2bc42}
-
-
-\subsection{Function Documentation}
-\index{drivetrain.\+h@{drivetrain.\+h}!curveamount@{curveamount}}
-\index{curveamount@{curveamount}!drivetrain.\+h@{drivetrain.\+h}}
-\subsubsection[{\texorpdfstring{curveamount(double L1, double L2, double W)}{curveamount(double L1, double L2, double W)}}]{\setlength{\rightskip}{0pt plus 5cm}{\bf Curve} curveamount (
-\begin{DoxyParamCaption}
-\item[{double}]{L1, }
-\item[{double}]{L2, }
-\item[{double}]{W}
-\end{DoxyParamCaption}
-)\hspace{0.3cm}{\ttfamily [inline]}}\hypertarget{drivetrain_8h_a2bd1c94bab26fa3bb4f4ef3b58896bea}{}\label{drivetrain_8h_a2bd1c94bab26fa3bb4f4ef3b58896bea}
-
-
-Turn two encoder readings (in coordinate units) into coordinates. 
-
-
-\begin{DoxyImageNoCaption}
-  \mbox{\includegraphics[width=\textwidth,height=\textheight/2,keepaspectratio=true]{driving_image.png}}
-\end{DoxyImageNoCaption}
-  
-
-\begin{equation}
-r=\frac{y}{sin(\theta)}
-\end{equation}
-
-\begin{equation}
-x=\frac{y}{sin(\theta)} 
-\end{equation}
-
- \index{drivetrain.\+h@{drivetrain.\+h}!operator+@{operator+}}
-\index{operator+@{operator+}!drivetrain.\+h@{drivetrain.\+h}}
-\subsubsection[{\texorpdfstring{operator+(\+Curve a, Curve b)}{operator+(Curve a, Curve b)}}]{\setlength{\rightskip}{0pt plus 5cm}{\bf Curve} operator+ (
-\begin{DoxyParamCaption}
-\item[{{\bf Curve}}]{a, }
-\item[{{\bf Curve}}]{b}
-\end{DoxyParamCaption}
-)\hspace{0.3cm}{\ttfamily [inline]}}\hypertarget{drivetrain_8h_ac066a178f480b2ef13117a6935768228}{}\label{drivetrain_8h_ac066a178f480b2ef13117a6935768228}
-
-
-Adds two curves. 
-
+\hypertarget{drivetrain_8h}{}\section{src/drivetrain/drivetrain.h File Reference}
+\label{drivetrain_8h}\index{src/drivetrain/drivetrain.\+h@{src/drivetrain/drivetrain.\+h}}
+{\ttfamily \#include $<$vector$>$}\\*
+{\ttfamily \#include $<$utility$>$}\\*
+{\ttfamily \#include \char`\"{}../util/math.\+h\char`\"{}}\\*
+{\ttfamily \#include \char`\"{}W\+P\+I\+Lib.\+h\char`\"{}}\\*
+Include dependency graph for drivetrain.\+h\+:
