--- a/roborio/latex/namespaces.tex
+++ b/roborio/latex/namespaces.tex
@@ -1,5 +1,5 @@
 \section{Namespace List}
 Here is a list of all namespaces with brief descriptions\+:\begin{DoxyCompactList}
-\item\contentsline{section}{\hyperlink{namespacefield}{field} }{\pageref{namespacefield}}{}
-\item\contentsline{section}{\hyperlink{namespacefield_1_1side}{field\+::side} }{\pageref{namespacefield_1_1side}}{}
+\item\contentsline{section}{\hyperlink{namespacedrivetrain}{drivetrain} }{\pageref{namespacedrivetrain}}{}
+\item\contentsline{section}{\hyperlink{namespacemath}{math} }{\pageref{namespacemath}}{}
 \end{DoxyCompactList}
