--- a/roborio/latex/refman.tex
+++ b/roborio/latex/refman.tex
@@ -145,17 +145,15 @@
 \chapter{File Index}
 \input{files}
 \chapter{Namespace Documentation}
-\input{namespacefield}
-\input{namespacefield_1_1side}
+\input{namespacedrivetrain}
+\input{namespacemath}
 \chapter{Class Documentation}
-\input{structCurve}
-\input{structDoublePair}
+\input{classdrivetrain_1_1differential__drive}
+\input{classdrivetrain_1_1motion__profile}
+\input{structdrivetrain_1_1point}
 \chapter{File Documentation}
 \input{drivetrain_8h}
-\input{test_8cpp}
-\input{kernel__interface_8h}
-\input{linux_8cpp}
-\input{matchdata_8h}
+\input{math_8h}
 %--- End generated contents ---
 
 % Index
