--- a/roborio/latex/annotated.tex
+++ b/roborio/latex/annotated.tex
@@ -1,5 +1,6 @@
 \section{Class List}
 Here are the classes, structs, unions and interfaces with brief descriptions\+:\begin{DoxyCompactList}
-\item\contentsline{section}{\hyperlink{structCurve}{Curve} \\*Describes the position and direction of a robot after a curve amount }{\pageref{structCurve}}{}
-\item\contentsline{section}{\hyperlink{structDoublePair}{Double\+Pair} \\*Stores generic 2-\/value real number objects }{\pageref{structDoublePair}}{}
+\item\contentsline{section}{\hyperlink{classdrivetrain_1_1differential__drive}{drivetrain\+::differential\+\_\+drive} }{\pageref{classdrivetrain_1_1differential__drive}}{}
+\item\contentsline{section}{\hyperlink{classdrivetrain_1_1motion__profile}{drivetrain\+::motion\+\_\+profile} }{\pageref{classdrivetrain_1_1motion__profile}}{}
+\item\contentsline{section}{\hyperlink{structdrivetrain_1_1point}{drivetrain\+::point} }{\pageref{structdrivetrain_1_1point}}{}
 \end{DoxyCompactList}
